# voda

./: .gitignore  Cargo.toml
.circleci/: Dockerfile.android  continue-config.yml
android/: build.gradle
android/app/: Cargo.toml  build.gradle
android/app/src/: lib.rs
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/s2e_systems/: MainActivity.java
android/app/src/main/res/drawable/: pub_sub_selector.xml  voda_launcher_foreground.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/mipmap-anydpi-v26/: voda_launcher.xml
publisher/: Cargo.toml
publisher/src/: main.rs
subscriber/: Cargo.toml
